# rustLaunchSite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cpp  Config.h  Downloader.cpp  Downloader.h  LICENSE  Logger.cpp  Logger.h  MainCommon.cpp  MainCommon.h  MainConsole.cpp  MainService.cpp  README.md  Rcon.cpp  Rcon.h  Server.cpp  Server.h  Updater.cpp  Updater.h  example.cfg  exampleConfig.jsonc  main.cpp  vcpkg.json
.github/scripts/: checkcache.sh  setenv.bat  setenv.sh
.github/workflows/: rustLaunchSite.yml
examples/systemd/: README.md  rlsDailyRestart.service  rlsDailyRestart.sh  rlsDailyRestart.timer  rustLaunchSite.service
vcpkg-triplets/: x64-mingw-static-debug.cmake  x64-mingw-static-minsizerel.cmake  x64-mingw-static-release.cmake  x64-windows-static-debug.cmake  x64-windows-static-md-debug.cmake  x64-windows-static-md-release.cmake  x64-windows-static-release.cmake
